--- a/css/screen.css
+++ b/css/screen.css
@@ -66,7 +66,7 @@ table, th, td {/*para debug*/
   width: 100%;
 }
 
-#iRot_center{
+#tdCenter{
   display:table-cell; 
   height:400px; 
   vertical-align:bottom; 
@@ -74,7 +74,7 @@ table, th, td {/*para debug*/
   width:20%;
 }
 
-.iRot_window {
+.JSmol_canvas {
   width:40%;
   text-align: center;
   visibility:hidden;
