Add form section and update related things (css/scripts)
Add separate section (tab_form) for the form content
Added to screen.css
Replace test_id > task_id
Remove excess <br> tags

--- a/css/screen.css
+++ b/css/screen.css
@@ -50,9 +50,12 @@ header{
   display:none;
 }
 
-.tab{ /*class="tab"*/
-  text-align: center;
-/*  background-color: red; */
+/* #div_form {
+  background-color: palevioletred;
+} */
+
+#gsForm {
+  padding: 100px 0;
 }
 
 table{
