--- a/css/screen.css
+++ b/css/screen.css
@@ -90,11 +90,15 @@ th, td {
   float: right;
 }
 #tdCenter{
-  display:table-cell; 
-  height:400px; 
-  vertical-align:bottom; 
+  /* display:table-cell;  */
+  /* vertical-align:bottom;  */
+  /* height:15rem;  */
   background-color:gray;
-  width:20%;
+  /* width:100%; */
+}
+
+.flexElem{
+  display:flex;
 }
 
 .JSmol_canvas {
