--- a/css/screen.css
+++ b/css/screen.css
@@ -6,8 +6,43 @@
   text-align: center;
 }
 
+body{
+	font-family:Verdana,sans-serif;
+  font-size: 1rem;
+	line-height:1.5;
+	color:#EEEEEE;
+  background-color: #404040;
+  margin:0;
+}
+
+h1, h2, h3, h4, h5, h6{
+	font:2.5em sans-serif;
+  font-weight:normal;
+	margin:0;
+	line-height:1.6em;
+	color:#EEEEEE;
+  background-color: #404040;
+}
+
+button,input,select,textarea,optgroup{
+  font:inherit;
+}
+/* optgroup{
+  font-weight:bold
+}  */
+
+
+header{
+	height: 32px;
+	overflow:hidden;
+	padding: 0 5px;
+	color:#EEEEEE;
+  background-color: #404040;
+  text-align: center;
+}
+
+
 a {
-  background-color:#303030;
   color:dodgerblue    ;
   border-radius: 4px;
   padding: 4px;
@@ -23,6 +58,47 @@ a:hover {
   color:palegreen;
   font-weight:bold;
 }*/
+
+nav li{
+  list-style:none; /*simbolo de itens da lista */
+  float:left; /*posicionamento dentro do container*/
+  height:24px; 
+  line-height:24px;
+  box-shadow:0 0 3px #888;
+  border-bottom-right-radius:3px;
+  border-bottom-left-radius:3px;
+  margin:0 2px;
+  width:200px;
+  overflow:hidden;
+  position:relative;
+  background:linear-gradient(#ccc,  #aaa);
+}
+
+nav li.selected{
+	background:linear-gradient(#e1e1e1,  #d1d1d1);
+}
+
+nav li a, nav li a:visited, nav li a:hover{
+  list-style:none;
+  display:block;
+  position:absolute;
+  top:0;
+  left:-2px;
+  height:24px;
+  line-height:24px;
+  width:204px; 
+  text-align:center;
+  color:#333; 
+  font-size:11px;
+  text-shadow:#e8e8e8 0 1px 0;
+  box-shadow:inset 0 1px 1px #888;
+} 
+
+nav li.selected a{
+  box-shadow:none; 
+}
+
+
 .dev-div{
   color:cornsilk;
   background-color: #404070;
@@ -36,30 +112,6 @@ a.dev-div:visited{
 
 /* https://coolors.co/contrast-checker/112a46-acc8e5 */
 
-body{
-	font:12px sans-serif;
-	line-height:2.0em;
-	color:#EEEEEE;
-  background-color: #404040;
-}
-
-h1, h2, h3, h4, h5, h6{
-	font:2.5em sans-serif;
-  font-weight:normal;
-	margin:0;
-	line-height:1.6em;
-	color:#EEEEEE;
-  background-color: #404040;
-}
-
-header{
-	height: 32px;
-	overflow:hidden;
-	padding: 0 5px;
-	color:#EEEEEE;
-  background-color: #404040;
-  text-align: center;
-}
 
 .debug{
   display:none;
@@ -109,42 +161,4 @@ th, td {
   width: auto;
 }
 
-nav li{
-  list-style:none; /*simbolo de itens da lista */
-  float:left; /*posicionamento dentro do container*/
-  height:24px; 
-  line-height:24px;
-  box-shadow:0 0 3px #888;
-  border-bottom-right-radius:3px;
-  border-bottom-left-radius:3px;
-  margin:0 2px;
-  width:200px;
-  overflow:hidden;
-  position:relative;
-  background:linear-gradient(#ccc,  #aaa);
-}
-
-nav li.selected{
-	background:linear-gradient(#e1e1e1,  #d1d1d1);
-}
-
-nav li a, nav li a:visited, nav li a:hover{
-  list-style:none;
-  display:block;
-  position:absolute;
-  top:0;
-  left:-2px;
-  height:24px;
-  line-height:24px;
-  width:204px; 
-  text-align:center;
-  color:#333; 
-  font-size:11px;
-  text-shadow:#e8e8e8 0 1px 0;
-  box-shadow:inset 0 1px 1px #888;
-} 
-
-nav li.selected a{
-  box-shadow:none; 
-}
 
