--- a/css/screen.css
+++ b/css/screen.css
@@ -1,8 +1,8 @@
 /* html,body{margin:2px;padding:1px;} */
 
-/* .coisa é para classes, #coisa é para id's */
+/* .thing is for classes, #thing is for id's */
 
-* { /*aplica para tudo*/
+* { /* applies to everything */
   text-align: center;
 }
 
@@ -60,8 +60,8 @@ a:hover {
 }*/
 
 nav li{
-  list-style:none; /*simbolo de itens da lista */
-  float:left; /*posicionamento dentro do container*/
+  list-style:none; /* possible symbol for list of items */
+  float:left; /*positioning inside container*/
   height:24px; 
   line-height:24px;
   box-shadow:0 0 3px #888;
@@ -129,7 +129,7 @@ table{
   border-color: #606060;
 }
 th, td {
-  border: 1px solid;
+  border: 1px solid; /*these borders help with formatting, but can be removed*/
   border-color: white;
 }
 #iRT_canvas_table{
