Add interactive Intro to paper task.
Add css properties for alternatives with feedback
Add new imagemap for intro task, as these images are shifted in aprox. 100px upwards.

--- a/css/screen.css
+++ b/css/screen.css
@@ -102,6 +102,14 @@ nav li.selected a{
   cursor: none;
 }
 
+.paper-intro-choices {
+  position: absolute;
+  top: 0px;
+  width: 130px;
+  height: 100px;
+  font-weight: bold;
+}
+
 .dev-div{
   color:cornsilk;
   background-color: #404070;
