Image translation and padronization
Change image names from "img (n).jpg" to "PSVT-R (n).jpg" and respective calls to it in iRT.html and scripts.js
Move compacted folder of images to G.drive
Delete english version of images from rep.
Padronized position of elements inside each image.
Translate to pt-br.
Create "div-psvt-answers" style class for div over the answers
Change imagemaps coordinates

--- a/css/screen.css
+++ b/css/screen.css
@@ -112,6 +112,16 @@ nav li.selected a{
   opacity: 1;
 }
 
+.div-psvt-answers {
+  position: absolute;
+  top: 540px;
+  left: 109px;
+  width: 770px;
+  height: 130px;
+  background-color: rgba(0,0,255,0); 
+  /* for fully transparent, leave (x,y,z,0) */
+}
+
 .paper-intro-choices {
   position: absolute;
   top: 0px;
