Add smooth transitions

--- a/css/screen.css
+++ b/css/screen.css
@@ -108,6 +108,11 @@ nav li.selected a{
   opacity: 0;
   transition: opacity 0.3s ease;
 }
+.smooth-vis {
+  transition: opacity 0.3s ease;
+  opacity: 1;
+  visibility: visible;
+}
 .unhider:hover .hidden-elem {
   visibility: visible;
   opacity: 1;
