--- a/css/screen.css
+++ b/css/screen.css
@@ -227,8 +227,13 @@ table.bulletTable td:nth-child(n + 2) {
   width: auto;
 }
 
+.grid-center {
+  display: grid;
+  place-items: center;
+}
+
 .chem-container {
-  width: 1100px;
+  width: 1100px; /* two 500px width images + 50px margin between + extra 50px*/
   margin: 0 auto; /* Centers horizontally */
   text-align: center;
 }
@@ -242,8 +247,9 @@ table.bulletTable td:nth-child(n + 2) {
   flex: 1; /* Each option takes up equal width */
   margin: 0 10px; /* Space between the divs */
   padding: 20px;
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc; */
   border-radius: 8px;
+  background-color: #666;
 }
 /* Add hover effect */
 .chem-option:hover {
