--- a/css/screen.css
+++ b/css/screen.css
@@ -195,7 +195,14 @@ input[type="radio"] {
 .grid-center {
   display: grid;
   place-items: center;
+  height: 80vh;
 }
+.grid-center-whole {
+  display: grid;
+  place-items: center;
+  height: 80vh;
+}
+
 
 .chem-container {
   width: 1100px; /* two 500px width images + 50px margin between + extra 50px*/
